# rust-todo-app

./: .env.example  .gitignore  Cargo.toml  examples.md
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
src/entities/: todo.rs
src/services/: todo.rs
